Fixing transparent background behind directions page

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ ul {list-style-type: none}
 
 .hero-grid-right {width:100px}
 
-.directions-grid-left {width: 100px; background-color: var(--black); backdrop-filter: blur(0px); -webkit-backdrop-filter: (0px);}
+.directions-grid-left {width: 100px; background-color: var(--black); backdrop-filter: blur(0px); -webkit-backdrop-filter: blur(0px);}
 
 .directions-grid-right {flex: 1; min-width: 80vw; background-color: var(--black)}
 
@@ -235,7 +235,7 @@ ul {list-style-type: none}
     flex-direction: column;
     align-items: right;
     width: 100vw;
-    height: calc(100vh - 0px);
+    height: calc(100vh - 140px);
     overflow-y: scroll;
     bottom: 0;
 }
